@@ -1,5 +1,8 @@
 0.9.7 (unreleased)
 
+Bug fixes:
+- Only clean up tables that have a dummy column (#169)
+
 0.9.6 - released 2018-10-12
 
 Features:
